# FYS4411_Project_1

./: .gitignore  Makefile  README.md  README_single_column_report.md  TERMINAL_CODE_GUIDE.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
data/results/: README.md  analytic_vs_numerical_energy.csv  project1_b_bruteforce.csv  project1_c_importance.csv  project1_c_importance_alpha045.csv  project1_d_optimization.csv  project1_e_blocking.csv  project1_e_blocking_alpha045.csv  project1_e_summary.csv  project1_e_summary_alpha045.csv  project1_g_interacting.csv  project1_h_pair_distance.csv  project1_h_pair_distance_summary.csv  project1_h_radial_density_jastrow.csv  project1_h_radial_density_no_jastrow.csv
docs/: CODE_USAGE.md  FEEDBACK_FIXES.md  FORMULAS.md
report/: ai_declaration.tex  main.tex  project1_report.tex  references.bib
report/tables/: table_1b_timing.tex  table_1b_validation.tex  table_1c_alpha045_3d.tex  table_1d_optimization.tex  table_1e_statistics.tex  table_1g_benchmark_context.tex  table_1g_minima.tex  table_1h_density.tex  table_1h_pair_distance.tex
scripts/: analyze_blocking.py  compare_analytic_numerical_energy.py  make_all_report_outputs.py  plot_feedback_additions.py  plot_fixed_results.py  plot_project1d_current.py  plot_report_single_column.py  plot_results.py  run_pair_distance.py  run_project1_b.py  run_project1_c.py  run_project1_d.py  run_project1_e.py  run_project1_g.py  run_project1_h.py  run_vmc.py
tests/: test_density.py  test_local_energy.py  test_samplers.py  test_statistics.py  test_wavefunction.py
(+8 files in other folders)
